--- a/tweets2text/static/style.css
+++ b/tweets2text/static/style.css
@@ -84,9 +84,22 @@
 }
 
 .status {
-    background-color: #eaab00;
     padding-left: 1.25%;
     padding-right: 1.25%;
+}
+
+.beta {
+    background-color: #eaab00;
+}
+
+.jail {
+    background-color: #4ab3f4;
+    color: #ffffff;
+}
+
+.success {
+    background-color: #008000;
+    color: #ffffff;
 }
 
 .col-10 h2 {
