Change description of behavior (replace follow back with welcome direct message

--- a/tweets2text/templates/index.html
+++ b/tweets2text/templates/index.html
@@ -40,7 +40,7 @@
         <hr>
 
         <ol>
-          <li><strong>Follow <a href="https://twitter.com/TweetsToText">@TweetsToText</a></strong>, and TweetsToText will follow you back. Now that we know each other, let's get to work.</li>
+          <li><strong>Follow <a href="https://twitter.com/TweetsToText">@TweetsToText</a></strong>, and TweetsToText will send you a welcome direct message. Now that we know each other, let's get to work.</li>
           <li><strong>Tweet @TweetsToText</strong> just before you start live-tweeting. You'll get a reply confirming that we've got your back.</li>
           <li><strong>Do your thing</strong> just like you normally would.</li>
           <li><strong>Tweet @TweetsToText again</strong> in your final tweet.</li>
