declare beta status

--- a/tweets2text/templates/index.html
+++ b/tweets2text/templates/index.html
@@ -31,10 +31,8 @@
       <div class='col-10'>
         <h2>Meet the bot</h2>
         <hr>
-        <h4>Current Status: <span class='status jail'>In Twitter Jail</span></h4>
-        <p>
-          We were bad. We didn't mean to be. We just can't help it.
-        </p>
+        <h4>Current Status: <span class='status beta'>In Beta</span></h4>
+        <p>TweetsToText is live for beta testing. We're asking potential users to try using it in realistic circumstances. You may encounter bugs or unexpected behavior, and we really want to hear from you if you do. <a href="https://github.com/rji-futures-lab/tweets-to-text/issues">File on issue</a> or <a href="mailto:gordonj@rjionline.org">drop us a line</a>. We want your feedback, good or bad (but especially the bad).</p>
 
         <h2>How it works</h2>
         <hr>
