small edits to homepage

--- a/tweets2text/templates/index.html
+++ b/tweets2text/templates/index.html
@@ -39,9 +39,9 @@
 
         <ol>
           <li><strong>Follow <a href="https://twitter.com/TweetsToText">@TweetsToText</a></strong>, and TweetsToText will send you a welcome direct message. Now that we know each other, let's get to work.</li>
-          <li><strong>Tweet @TweetsToText</strong> just before you start live-tweeting. You'll get a reply confirming that we've got your back.</li>
+          <li>Just before you start live-tweeting, <strong>tweet @TweetsToText</strong>. You'll get a reply confirming that we've got your back.</li>
           <li><strong>Do your thing</strong> just like you normally would.</li>
-          <li><strong>Tweet @TweetsToText again</strong> in your final tweet.</li>
+          <li>When your finished, <strong>tweet @TweetsToText again</strong> in your final tweet.</li>
           <li><strong>Check your DMs</strong> for a message with a link to your text.</li>
         </ol>
 
@@ -62,7 +62,7 @@
       <p><a href="https://github.com/rji-futures-lab/tweets-to-text">Built in the RJI Futures Lab</a></p>
       <div id="copyright">
         <p>
-          Copyright © 2018 - Curators of the <a href="http://missouri.edu/">University of Missouri</a>. All rights reserved.
+          Copyright © 2019 - Curators of the <a href="http://missouri.edu/">University of Missouri</a>. All rights reserved.
         </p>
         <p>
           <a href="http://missouri.edu/dmca/">DMCA</a> and other <a
