--- a/tweets2text/templates/tweets2text/homepage.html
+++ b/tweets2text/templates/tweets2text/homepage.html
@@ -33,17 +33,32 @@
         <h2>Meet the bot</h2>
         <hr>
         <h4>Current Status: <span class='status beta'>In Beta</span></h4>
-        <p>TweetsToText is live for beta testing. We're asking potential users to try using it in realistic circumstances. You may encounter bugs or unexpected behavior, and we really want to hear from you if you do. <a href="https://github.com/rji-futures-lab/tweets-to-text/issues">File on issue</a> or <a href="mailto:gordonj@rjionline.org">drop us a line</a>. We want your feedback, good or bad (but especially the bad).</p>
+        <p>TweetsToText is live for beta testing. We're asking potential users to try using it in realistic circumstances. You may encounter bugs or unexpected behavior, and we really want to hear from you if you do. <a href="https://github.com/rji-futures-lab/tweets-to-text/issues">File an issue</a> or <a href="mailto:gordonj@rjionline.org">drop us a line</a>. We want your feedback, good or bad (but especially the bad).</p>
 
-        <h2>How it works</h2>
+        <h2>How to sign up</h2>
         <hr>
+        <p>To begin, <strong>follow <a href="https://twitter.com/TweetsToText">@TweetsToText</a></strong> on Twitter. That's it! No extra login or password necessary.</p>
+
+        <h2>How to use it</h2>
+        <hr>
+        <p>There are two ways you can ask TweetsToText for help.</p>
+
+        <h3>Do it live</h3>
 
         <ol>
-          <li><strong>Follow <a href="https://twitter.com/TweetsToText">@TweetsToText</a></strong>, and TweetsToText will send you a welcome direct message. Now that we know each other, let's get to work.</li>
-          <li>Just before you start live-tweeting, <strong>tweet @TweetsToText</strong>. You'll get a reply confirming that we've got your back.</li>
-          <li><strong>Do your thing</strong> just like you normally would.</li>
-          <li>When your finished, <strong>tweet @TweetsToText again</strong> in your final tweet.</li>
-          <li><strong>Check your DMs</strong> for a message with a link to your text.</li>
+        <li>Just before you start live-tweeting, <strong>tweet @TweetsToText</strong>. You'll get a reply confirming that we've got your back.</li>
+        <li><strong>Do your thing</strong> just like you normally would.</li>
+        <li>When you're finished, <strong>tweet @TweetsToText</strong> again in your final tweet.</li>
+        <li><strong>Check your DMs</strong> for a message with a link to your text.</li>
+        </ol>
+
+        <h3>Do it later</h3>
+
+        <ol>
+        <li><strong>Scroll back</strong> on your timeline to the first tweet you want to capture.</li>
+        <li><strong>DM this tweet</strong> to TweetsToText.</li>
+        <li>If the tweet is the first in a thread, and you just want the tweets in that thread, <strong>include the work &quot;thread&quot;</strong> in the text of your DM.</li>
+        <li><strong>Wait a few seconds</strong>, and TweetsToText will respond with a link to your text.</li>
         </ol>
 
         <h2>Who it's for</h2>
