--- a/tweets2text/templates/tweets2text/homepage.html
+++ b/tweets2text/templates/tweets2text/homepage.html
@@ -57,7 +57,7 @@
         <ol>
         <li><strong>Scroll back</strong> on your timeline to the first tweet you want to capture.</li>
         <li><strong>DM this tweet</strong> to TweetsToText.</li>
-        <li>If the tweet is the first in a thread, and you just want the tweets in that thread, <strong>include the work &quot;thread&quot;</strong> in the text of your DM.</li>
+        <li>If the tweet is the first in a thread, and you just want the tweets in that thread, <strong>include the word &quot;thread&quot;</strong> in the text of your DM.</li>
         <li><strong>Wait a few seconds</strong>, and TweetsToText will respond with a link to your text.</li>
         </ol>
 
